Make episode title text white

--- a/templates/story_detail.html
+++ b/templates/story_detail.html
@@ -198,7 +198,7 @@
                 <!-- Episode Content -->
                 <div style="margin-top: 1em; position: relative; z-index: 2; display: flex; flex-direction: column; align-items: center; justify-content: center; text-align: center;">
                     <h3 style="font-size: 2em; margin-bottom: 1em; font-weight: 700; text-align: center; width: 100%;">
-                        <a href="{% url 'episode_detail' episode.pk %}" style="text-decoration: none; background: linear-gradient(135deg, #c287a3, #b4316a); background-clip: text; -webkit-background-clip: text; -webkit-text-fill-color: transparent; transition: var(--transition);" class="faruma">
+                        <a href="{% url 'episode_detail' episode.pk %}" style="text-decoration: none; color: #ffffff; transition: var(--transition);" class="faruma">
                             {{ episode.title_dv }}
                         </a>
                     </h3>
