--- a/templates/base.html
+++ b/templates/base.html
@@ -26,12 +26,12 @@
     
     <!-- Progressive Web App Support -->
     <link rel="manifest" href="/static/manifest.json">
-    <meta name="theme-color" content="#8B4513">
+    <meta name="theme-color" content="#d1bcc7">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="VAAHAKAINN.">
     <link rel="apple-touch-icon" href="/static/logovhk.PNG">
-    <meta name="msapplication-TileColor" content="#8B4513">
+    <meta name="msapplication-TileColor" content="#d1bcc7">
     <meta name="msapplication-TileImage" content="/static/logovhk.PNG">
     
     <!-- Font Loading Optimization -->
