--- a/templates/story_detail.html
+++ b/templates/story_detail.html
@@ -581,22 +581,41 @@ function showMessage(message, type) {
     }
     
     .episodes-grid > div {
-        padding: 1.8rem !important;
+        padding: 1.2rem !important;
         border-radius: 15px !important;
         border-width: 2px !important;
+        min-height: 140px !important;
+        max-height: 160px !important;
     }
     
     .episodes-grid h3 {
-        font-size: 1.5em !important;
-        margin-bottom: 0.8em !important;
+        font-size: 1.3em !important;
+        margin-bottom: 0.5em !important;
+        margin-top: 0.8em !important;
     }
     
     .episodes-grid a[href*="episode_detail"] {
-        padding: 0.6em 1.8em !important;
-        font-size: 0.8em !important;
-        min-width: 130px !important;
-        height: 42px !important;
-        border-radius: 40px 8px 40px 8px !important;
+        padding: 0.5em 1.5em !important;
+        font-size: 0.75em !important;
+        min-width: 120px !important;
+        height: 36px !important;
+        border-radius: 30px 6px 30px 6px !important;
+    }
+    
+    /* Make date badge smaller */
+    .episodes-grid > div > div[style*="position: absolute"][style*="top: 15px"] {
+        padding: 0.2em 0.6em !important;
+        font-size: 0.7em !important;
+        top: 10px !important;
+        left: 10px !important;
+    }
+    
+    /* Make episode number badge smaller */
+    .episodes-grid > div > div[style*="position: absolute"][style*="top: -5px"] {
+        padding: 0.2em 0.6em !important;
+        font-size: 0.75em !important;
+        top: -3px !important;
+        right: 15px !important;
     }
 }
 
@@ -607,21 +626,41 @@ function showMessage(message, type) {
     }
     
     .episodes-grid > div {
-        padding: 1.5rem !important;
+        padding: 1rem !important;
         border-radius: 12px !important;
+        min-height: 120px !important;
+        max-height: 140px !important;
     }
     
     .episodes-grid h3 {
-        font-size: 1.3em !important;
-        margin-bottom: 0.6em !important;
+        font-size: 1.2em !important;
+        margin-bottom: 0.4em !important;
+        margin-top: 0.6em !important;
     }
     
     .episodes-grid a[href*="episode_detail"] {
-        padding: 0.5em 1.5em !important;
-        font-size: 0.75em !important;
-        min-width: 120px !important;
-        height: 38px !important;
-        border-radius: 35px 6px 35px 6px !important;
+        padding: 0.4em 1.2em !important;
+        font-size: 0.7em !important;
+        min-width: 100px !important;
+        height: 32px !important;
+        border-radius: 25px 5px 25px 5px !important;
+    }
+    
+    /* Make badges even smaller on small mobile */
+    .episodes-grid > div > div[style*="position: absolute"][style*="top: 15px"], 
+    .episodes-grid > div > div[style*="position: absolute"][style*="top: 10px"] {
+        padding: 0.15em 0.4em !important;
+        font-size: 0.65em !important;
+        top: 8px !important;
+        left: 8px !important;
+    }
+    
+    .episodes-grid > div > div[style*="position: absolute"][style*="top: -5px"], 
+    .episodes-grid > div > div[style*="position: absolute"][style*="top: -3px"] {
+        padding: 0.15em 0.4em !important;
+        font-size: 0.7em !important;
+        top: -2px !important;
+        right: 12px !important;
     }
 }
 </style>
