--- a/templates/home.html
+++ b/templates/home.html
@@ -749,7 +749,7 @@
     font-size: 1.4rem;
     font-weight: 700;
     margin-bottom: 1rem;
-    color: var(--text-primary);
+    color: #b4316a;
     line-height: 1.3;
 }
 
